# tbot

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.html  CHANGELOG.md  CNAME  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE.html  Makefile  README.md  cli.html  codecov.yml  completions.sh  conf.py  configuration.html  context.html  demo_backend.py  do-release.sh  generate_documentation.py  generate_mdlog.py  genindex.html  index.html  index.rst  installation.html  logging.html  migration.html  mypy.ini  objects.inv  py-modindex.html  pylintrc  pyproject.toml  pytest.html  quickstart.html  recipes.html  search.html  searchindex.js  selftest.sh  (+5 more)
.github/workflows/: ci.yml  docs.yml
Documentation/: build-docs.sh  build-pdf-docs.sh  cli.rst  conf.py  configuration.rst  context.rst  index.rst  installation.rst  logging.rst  migration.rst  pytest.rst  quickstart.rst  recipes.rst  tbot.1
Documentation/contrib/: connector.rst  gpio.rst  linux.rst  utils.rst
Documentation/modules/: log.rst  machine.rst  machine_board.rst  machine_channel.rst  machine_connector.rst  machine_linux.rst  main.rst  role.rst  selectable.rst  tc.rst
_modules/: index.html  tbot.html
_modules/tbot/: tc.html  (+7 more)
_sources/: CHANGELOG.md.txt  CONTRIBUTING.md.txt  LICENSE.rst.txt  cli.rst.txt  context.rst.txt  index.rst.txt  installation.rst.txt  logging.rst.txt  pytest.rst.txt
_static/: documentation_options.js
config/: tbot.py  tbot.toml
contrib/: connector.html  gdb.html  gpio.html  linux.html  locking.html  swupdate.html  timing.html  ub-try-int  uboot.html  uboot_flash.py  uboot_send.py  utils.html
doc/: building.rst  builtins.rst  conf.py  config.rst  configuration.rst  example-workflow.rst  examples.rst  getting-started.rst  index.rst  install.rst  logging.rst  module-board.rst  module-linux.rst  module-machine.rst  module-main.rst  module-tc.rst  module.rst  quickstart.rst  recipes.rst  tbot.1  tbot.rst  usage.rst
doc-old/: example-workflow.rst  index.rst  install.rst
generators/: debug_messages.py  demo_backend.py  demo_generator.py  dot.py  generate_documentation.py  generate_htmllog.py  generate_mdlog.py  htmllog.py  junit.py  logparser.py  messages.py  template.html
modules/: error.html  log.html  machine.html  machine_board.html  machine_channel.html  machine_connector.html  machine_linux.html  machine_shell.html  main.html  role.html  selectable.html  tc.html
selftest/: conftest.py  mypy.ini  testmachines.py
static_tests/: machine.py  path.py  run.sh  testcase.py
stubs/: io.pyi  junit_xml.pyi  pytest.pyi  serial.pyi  termcolor2.pyi
tbot/: __about__.py  __init__.py  collector.py  config.py  config_parser.py  connection.py  context.py  decorators.py  defaults_config.py  error.py  loader.py  log.py  log_event.py  log_events.py  log_file.py  logger.py  logger_old.py  machine  main.py  newbot.py  role.py  selectable.py  tc.py  testcase_collector.py
tbot-legacy/: config.py  defaults_config.py  log.py  main.py  tc.py  testcase_collector.py
tbot_contrib/: gdb.py  gpio.py  linux.py  locking.py  utils.py
tc/: board_corvus.py  board_p2020rdb.py  common_tasks.py  demo_bisect.py  tc_board_corvus.py  tc_uboot_sandbox.py  test_boardshell.py
tc-old/: demo_bisect.py  test.py  test_boardshell.py
(+300 files in other folders)
