[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "tbot/_version.py"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.7"
mypy_path = "stubs/:./"
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = false
incremental = true

check_untyped_defs = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "tbot.tc.callable",
    "tbot_contrib.swupdate.swupdate_script",
    # the loader is a mess, don't even try checking it
    "tbot.loader",
]
ignore_errors = true

[tool.coverage.run]
omit = ["tbot/tc/*"]
