[metadata]
name = tbot
description = tbot embedded test & development automation tool
long_description = README.md
long_description_content_type = text/markdown
url = "https://tbot.tools"
license = "GPL-3.0-or-later"
license_file = LICENSE
platforms = unix, linux
project_urls =
    Changelog=https://github.com/Rahix/tbot/blob/master/CHANGELOG.md
    Source=https://github.com/Rahix/tbot
    Tracker=https://github.com/Rahix/tbot/issues

[options]
install_requires =
    termcolor2

python_requires = >=3.6
zip_safe = no

packages = find:

[options.packages.find]
include =
    tbot
    tbot.*
    tbot_contrib
    tbot_contrib.*


[options.entry_points]
console_scripts =
    tbot=tbot.main:main

[options.package_data]
tbot = py.typed
tbot_contrib = py.typed
