[metadata]
name = tbot
description = tbot embedded test & development automation tool
long_description = README.md
long_description_content_type = text/markdown
url = "https://tbot.tools"
license = "GPL-3.0-or-later"
license_file = LICENSE
platforms = unix, linux
project_urls =
    Changelog=https://github.com/Rahix/tbot/blob/master/CHANGELOG.md
    Source=https://github.com/Rahix/tbot
    Tracker=https://github.com/Rahix/tbot/issues

[options]
install_requires =
    termcolor2

python_requires = >=3.6
zip_safe = no

packages = find:

[options.packages.find]
include =
    tbot
    tbot.*
    tbot_contrib
    tbot_contrib.*


[options.entry_points]
console_scripts =
    tbot=tbot.main:main

[options.package_data]
tbot = py.typed
tbot_contrib = py.typed

[flake8]
ignore = E203, E266, E501, F541, W503, D100, D104, D105, D202
max-line-length = 80
max-complexity = 22
select = B,C,E,F,W,T4,B9,D

[mypy]
python_version = 3.6
mypy_path = stubs/:./
warn_incomplete_stub = True
warn_redundant_casts = True
warn_unused_configs = False
incremental = True

check_untyped_defs = True
disallow_any_unimported = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
no_implicit_optional = True
strict_optional = True
warn_return_any = True
warn_unused_ignores = False

[mypy-tbot.tc.callable]
ignore_errors = True
